--- a/index.html
+++ b/index.html
@@ -22,19 +22,20 @@
             </div>
         </div>
 
-        <div class="box">
+        <div class="box"> <!--first book--> 
             <div class="pdfs">
                 <form>
-                    <div class="uploadDelete">
+                    <div class="uploadDone">
                         <button class=uploadBtn>
                             <i class="fas fa-file-upload"></i>
                         </button>
-                        <button class=deleteBtn>
-                            <i class="fas fa-trash-alt"></i>
+                        <button class="doneBtn">
+                            <i class="fas fa-check-square"></i>
                         </button>
                     </div>
-                        <button class=openBtn>
-                            <a href="./pdf/Digital_image_processing_by_Rafael_C._Go.pdf" 
+                        <button class="openBtn">
+                            <a 
+                            href="./pdf/Digital_image_processing_by_Rafael_C._Go.pdf" 
                             target="blank"> <i class="fa-solid fa-book-open"></i> </a>
                         </button>
                 </form>    
@@ -56,18 +57,18 @@
             </div>
         </div>
 
-        <div class="box">
+        <div class="box"> <!-- second book -->
             <div class="pdfs">
                 <form>
-                    <div class="uploadDelete">
-                        <button class=uploadBtn>
+                    <div class="uploadDone">
+                        <button class="uploadBtn">
                             <i class="fas fa-file-upload"></i>
                         </button>
-                        <button class=deleteBtn>
-                            <i class="fas fa-trash-alt"></i>
+                        <button class=doneBtn>
+                            <i class="fas fa-check-square"></i>
                         </button>
                     </div>
-                        <button class=openBtn>
+                        <button class="openBtn">
                             <a href="./pdf/Digital_image_processing_by_Rafael_C._Go.pdf" 
                             target="blank"> <i class="fa-solid fa-book-open"></i> </a>
                         </button>
@@ -89,18 +90,18 @@
                 <div class="bar shadow indeterminate-60 leaf"></div>
             </div>
         </div>
-        <div class="box">
+        <div class="box"> <!-- third book -->
             <div class="pdfs">
                 <form>
-                    <div class="uploadDelete">
-                        <button class=uploadBtn>
+                    <div class="uploadDone">
+                        <button class="uploadBtn">
                             <i class="fas fa-file-upload"></i>
                         </button>
-                        <button class=deleteBtn>
-                            <i class="fas fa-trash-alt"></i>
+                        <button class=doneBtn>
+                            <i class="fas fa-check-square"></i>
                         </button>
                     </div>
-                        <button class=openBtn>
+                        <button class="openBtn">
                             <a href="./pdf/Digital_image_processing_by_Rafael_C._Go.pdf" 
                             target="blank"> <i class="fa-solid fa-book-open"></i> </a>
                         </button>
@@ -122,18 +123,18 @@
                 <div class="bar shadow indeterminate-40 bars"></div>
             </div>
         </div>
-        <div class="box">
+        <div class="box"> <!-- fourth book -->
             <div class="pdfs">
                 <form>
-                    <div class="uploadDelete">
-                        <button class=uploadBtn>
+                    <div class="uploadDone">
+                        <button class="uploadBtn">
                             <i class="fas fa-file-upload"></i>
                         </button>
-                        <button class=deleteBtn>
-                            <i class="fas fa-trash-alt"></i>
+                        <button class=doneBtn>
+                            <i class="fas fa-check-square"></i>
                         </button>
                     </div>
-                        <button class=openBtn>
+                        <button class="openBtn">
                             <a href="./pdf/Digital_image_processing_by_Rafael_C._Go.pdf" 
                             target="blank"> <i class="fa-solid fa-book-open"></i> </a>
                         </button>
@@ -155,15 +156,15 @@
                 <div class="bar shadow indeterminate-80 lines"></div>
             </div>
         </div>
-        <div class="box">
+        <div class="box"> <!-- fifth book -->
             <div class="pdfs">
                 <form>
-                    <div class="uploadDelete">
-                        <button class=uploadBtn>
+                    <div class="uploadDone">
+                        <button class="uploadBtn">
                             <i class="fas fa-file-upload"></i>
                         </button>
-                        <button class=deleteBtn>
-                            <i class="fas fa-trash-alt"></i>
+                        <button class="doneBtn">
+                            <i class="fas fa-check-square"></i>
                         </button>
                     </div>
                     <button class=openBtn>
