--- a/index.html
+++ b/index.html
@@ -22,12 +22,20 @@
             </div>
         </div>
 
+        <div class="image-upload">
+            <label for="file-input">
+              <i class="fas fa-file-upload"></i>
+            </label>
+            <input id="file-input" type="file" />
+          </div>
         <div class="box"> <!--first book--> 
             <div class="pdfs">
-                <form>
-                    <div class="uploadDone">
+                    <div class="uploadDone">          
                         <button class=uploadBtn>
-                            <i class="fas fa-file-upload"></i>
+                            <label>
+                                <i class="fas fa-file-upload"></i>
+                            </label>
+                            <input type="file" class="uploadPdf"/>
                         </button>
                         <button class="doneBtn">
                             <i class="fas fa-check-square"></i>
@@ -38,7 +46,6 @@
                             href="./pdf/Digital_image_processing_by_Rafael_C._Go.pdf" 
                             target="blank"> <i class="fa-solid fa-book-open"></i> </a>
                         </button>
-                </form>    
             </div>                
             <div class="pagesNumber">
                 <input type="text" class="bookName" id="bookName" value="">
@@ -59,7 +66,6 @@
 
         <div class="box"> <!-- second book -->
             <div class="pdfs">
-                <form>
                     <div class="uploadDone">
                         <button class="uploadBtn">
                             <i class="fas fa-file-upload"></i>
@@ -71,8 +77,7 @@
                         <button class="openBtn">
                             <a href="./pdf/Digital_image_processing_by_Rafael_C._Go.pdf" 
                             target="blank"> <i class="fa-solid fa-book-open"></i> </a>
-                        </button>
-                </form>    
+                        </button>  
             </div> 
             <div class="pagesNumber">
                 <input type="text" class="bookName" id="bookName" value="">
@@ -92,7 +97,6 @@
         </div>
         <div class="box"> <!-- third book -->
             <div class="pdfs">
-                <form>
                     <div class="uploadDone">
                         <button class="uploadBtn">
                             <i class="fas fa-file-upload"></i>
@@ -104,8 +108,7 @@
                         <button class="openBtn">
                             <a href="./pdf/Digital_image_processing_by_Rafael_C._Go.pdf" 
                             target="blank"> <i class="fa-solid fa-book-open"></i> </a>
-                        </button>
-                </form>    
+                        </button>  
             </div> 
             <div class="pagesNumber">
                 <input type="text" class="bookName" id="bookName" value="">
@@ -125,7 +128,6 @@
         </div>
         <div class="box"> <!-- fourth book -->
             <div class="pdfs">
-                <form>
                     <div class="uploadDone">
                         <button class="uploadBtn">
                             <i class="fas fa-file-upload"></i>
@@ -138,7 +140,6 @@
                             <a href="./pdf/Digital_image_processing_by_Rafael_C._Go.pdf" 
                             target="blank"> <i class="fa-solid fa-book-open"></i> </a>
                         </button>
-                </form>    
             </div> 
             <div class="pagesNumber">
                 <input type="text" class="bookName" id="bookName" value="">
@@ -158,7 +159,6 @@
         </div>
         <div class="box"> <!-- fifth book -->
             <div class="pdfs">
-                <form>
                     <div class="uploadDone">
                         <button class="uploadBtn">
                             <i class="fas fa-file-upload"></i>
@@ -171,7 +171,6 @@
                         <a href="./pdf/Digital_image_processing_by_Rafael_C._Go.pdf" 
                         target="blank"> <i class="fa-solid fa-book-open"></i> </a>
                     </button>
-                </form>    
             </div> 
             <div class="pagesNumber">
                 <input type="text" class="bookName" id="bookName" value="">
