--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 </div>
             </div>
             <div class="progress">
-                <div class="bar shadow indeterminate-80 lines"></div>
+                <div class="bar shadow indeterminate-100 aztec"></div><!--was before: bar shadow indeterminate-80 lines -->
             </div>
         </div>
         <div class="box"> <!-- fifth book -->
@@ -194,6 +194,7 @@
                 <div class="bar shadow indeterminate-52 wiggle"></div>
             </div>
         </div>
+
 
       
 <!--
@@ -246,10 +247,18 @@
             <div class="bar shadow indeterminate-40 zigZag"></div>
         </div>
         -->
-        <div class="done-container">
-            <div class="done-popup">
-                <h3>You're done reading</h3>
+        <div class="update-container">
+            <div class="update-popup">
+                <h3>Book updated</h3>
                 <h4 class="book-name"></h4>
+            </div>
+        </div>
+        <div class="done-container" id="">
+            <div class="done-popup">
+                <h3 class="close-window">X</h3>
+                <h3>Are you done reading ? </h3>
+                <h4 class="book-name"></h4>
+                <h3 class="execute">Yes</h3>
             </div>
         </div>
     </div>
