--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
               <i class="fas fa-file-upload"></i>
             </label>
             <input id="file-input" type="file" />
-          </div>
+        
+        </div>
+        <button class="sign-btn">Sign in</button>
+
 
         <div class="box"> <!--first book--> 
             <div class="first-line">
@@ -278,12 +281,12 @@
    <!-- Add Configuraion keys -->
    <script> 
         const firebaseConfig = {
-            apiKey: 'simania-13dcb',
+            apiKey: 'AIzaSyAY6Yg0ODD7W5wyIWHDJQFc0p1TbW7YiCM',
             authDomain: 'simania-13dcb',
             projectId: 'simania-13dcb',
             storageBucket: 'simania-13dcb',
             mesasageingSenderId: 'simania-13dcb',
-            appId: 'simania-13dcb'                
+            appId: 'simania-13dcb'
         };
 
         // Initialize Firebase 
@@ -294,6 +297,7 @@
     </script>
 
 <script src="https://www.gstatic.com/firebasejs/ui/6.0.0/firebase-ui-auth.js"></script>
+
 
     <!-- Main JS file-->
     <script src="main.js"></script>
