--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
    <script> 
         const firebaseConfig = {
             apiKey: 'AIzaSyAY6Yg0ODD7W5wyIWHDJQFc0p1TbW7YiCM',
-            authDomain: 'simania-13dcb',
+            authDomain: 'https://gallant-pike-9e51c2.netlify.app/',
             projectId: 'simania-13dcb',
             storageBucket: 'simania-13dcb',
             mesasageingSenderId: 'simania-13dcb',
