--- a/index.html
+++ b/index.html
@@ -23,14 +23,28 @@
             </div>
         </div>
 
-        <div class="image-upload">
-            <label for="file-input">
-              <i class="fas fa-file-upload"></i>
-            </label>
-            <input id="file-input" type="file" />
-        
+
+        <div id="user-signed-in" class="hidden">
+            <div id="user-info">
+                <div id="photo-container">
+                  <img id="photo">
+                </div>
+                <div id="name"></div>
+                <div id="email"></div>
+                <div id="phone"></div>
+                <div id="is-new-user"></div>
+                <div class="clearfix"></div>
+              </div>
+              <p>
+                <button id="sign-out">Sign Out</button>
+                <button id="delete-account">Delete account</button>
+              </p>
         </div>
-        <button class="sign-btn">Sign in</button>
+
+        <div id="user-signed-out" class="hidden">
+            <button class="sign-btn">Sign in with Google</button>  
+            <div id="ui-container"></div>
+        </div>
 
 
         <div class="box"> <!--first book--> 
