--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               </div>
               <p>
                 <button id="sign-out">Sign Out</button>
-                <button id="delete-account">Delete account</button>
+                <!-- <button id="delete-account">Delete account</button> -->
               </p>
         </div>
 
