--- a/index.html
+++ b/index.html
@@ -35,16 +35,23 @@
                 <div id="is-new-user"></div>
                 <div class="clearfix"></div>
               </div>
-              <p>
+              <div class="atrributes">
+                <a class="bmc-button" href="https://www.buymeacoffee.com/rabeyalC" target="_blank" >
+                    <img 
+                        src="https://cdn.buymeacoffee.com/buttons/bmc-new-btn-logo.svg" 
+                        alt="Buy me a coffee">
+                </a>
                 <button id="sign-out">Sign Out</button>
                 <!-- <button id="delete-account">Delete account</button> -->
-              </p>
+            </div>
+
         </div>
 
         <div id="user-signed-out" class="hidden">
             <button class="sign-btn">Sign in with Google</button>  
             <div id="ui-container"></div>
         </div>
+           
 
 
         <div class="box"> <!--first book--> 
